clusters/home-workers/ingress-nginx/jenkins-hooks-hephy-pro/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-hooks-hephy-pro
  namespace: ingress-nginx
spec:
  ports:
    - name: moo-ingress
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
# See gitno-hephy-pro which has the same backend
kind: Endpoints
apiVersion: v1
metadata:
  name: jenkins-hooks-hephy-pro
  namespace: ingress-nginx
subsets:
- addresses:
  - ip: 10.17.12.202    # 202.12.17.10.in-addr.arpa domain name pointer nginx-dmz.nerdland.local.
  ports:
  - port: 80
    name: moo-ingress-http
  - port: 443
    name: moo-ingress
